# goph420-w2025-lab03

./: .gitignore  README.md  pyproject.toml
examples/: plot_dispersion_equation.py
